<resources>
    <string name="app_name">PokeList</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="description">Description</string>
    <string name="list">List Layout</string>
    <string name="grid">Grid Layout</string>
    <string name="about_page">About Page</string>
    <string name="hello">HELLO THERE! ᥫ᭡</string>
    <string name="made_by">MADE BY : </string>
    <string name="find">Lets Find \nYour Favourite Pokemon</string>
    <string name="see">See More Pokemon</string>
    <string name="my_name">Vira Tiara Witri</string>
    <string name="email">vtiaraw2@gmail.com</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="type">Type</string>
    <string name="abilities">Abilities</string>
    <string name="weaknesses">Weaknesses</string>
    <string-array name="data_name">
        <item>Bulbasaur</item>
        <item>Charmander</item>
        <item>Squirtle</item>
        <item>Caterpie</item>
        <item>Weedle</item>
        <item>Pidgey</item>
        <item>Rattata</item>
        <item>Spearow</item>
        <item>Ekans</item>
        <item>Pikachu</item>
        <item>Sandshrew</item>
        <item>Nidoran</item>
        <item>Clefairy</item>
        <item>Vulpix</item>
        <item>Jigglypuff</item>
        <item>Zubat</item>
        <item>Oddish</item>
        <item>Paras</item>
        <item>Venonat</item>
        <item>Diglett</item>
        <item>Meowth</item>
        <item>Psyduck</item>
    </string-array>
</resources>