<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/pokemon_name" />

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/height"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_weight"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/tv_height_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_height"
            app:layout_constraintStart_toStartOf="@+id/tv_height"
            app:layout_constraintTop_toBottomOf="@id/tv_height" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_gender"
            app:layout_constraintStart_toEndOf="@+id/tv_height"
            app:layout_constraintTop_toTopOf="@+id/tv_height" />

        <TextView
            android:id="@+id/tv_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_weight"
            app:layout_constraintStart_toStartOf="@+id/tv_weight"
            app:layout_constraintTop_toBottomOf="@id/tv_weight" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_weight"
            app:layout_constraintTop_toTopOf="@+id/tv_height" />

        <LinearLayout
            android:id="@+id/gender_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/tv_gender"
            app:layout_constraintStart_toStartOf="@+id/tv_gender"
            app:layout_constraintTop_toBottomOf="@+id/tv_gender">

            <ImageView
                android:id="@+id/img_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_male" />

            <ImageView
                android:id="@+id/img_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_female" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/type"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_abilities"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_height_value" />

        <TextView
            android:id="@+id/tv_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_type"
            app:layout_constraintStart_toStartOf="@+id/tv_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <TextView
            android:id="@+id/tv_abilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abilities"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_weaknesses"
            app:layout_constraintStart_toEndOf="@+id/tv_type"
            app:layout_constraintTop_toTopOf="@+id/tv_type" />

        <TextView
            android:id="@+id/tv_abilities_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_abilities"
            app:layout_constraintStart_toStartOf="@+id/tv_abilities"
            app:layout_constraintTop_toBottomOf="@+id/tv_abilities" />

        <TextView
            android:id="@+id/tv_weaknesses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weaknesses"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_abilities"
            app:layout_constraintTop_toTopOf="@+id/tv_type" />

        <TextView
            android:id="@+id/tv_weaknesses_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_weaknesses"
            app:layout_constraintStart_toStartOf="@+id/tv_weaknesses"
            app:layout_constraintTop_toBottomOf="@+id/tv_weaknesses" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_type_value" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>